<resources>
    <string name="app_name" translatable="false">Essteling Quiz</string>
    <string name="errorAboutCodeLength">The code must be 6 digits long</string>
    <string name="vliegendeAttractie">Flying belgium</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="play_game">Play Game</string>
    <string name="map">Map</string>
    <string name="medals">Medals</string>
    <string name="help">Help</string>
    <string name="helpLong">Welcome to the essteling quiz app. This app is played in the queue of an attraction of your choice. Above on the map you can see which attractions all contain one of our quiz boards. You play the quiz by going to one of these boards and entering the code that is displayed. After this, a question will be shown on your phone, you can answer this question by pressing 1 of the buttons at the board corresponding to your answer.</string>
    <string name="step_1">Step 1</string>
    <string name="step_2">Step 2</string>
    <string name="step_3">Step 3</string>
    <string name="step_4">Step 4</string>
    <string name="step_5">Step 5</string>
    <string name="incorrect" translatable="false">Incorrect!</string>
    <string name="correct" translatable="false">Correct!</string>
    <string name="back_button_text">Back</string>
    <string name="wrong_answer_text">The answer you\'ve just entered is incorrect! The right answer is:</string>
    <string name="correct_message">The answer you\'ve entered is correct! Congrats!</string>
    <string name="nextsteps_text">The answer will be submitted to the medal overview. Have fun and keep on collecting medals!</string>
    <string name="swipe_right"><![CDATA[Swipe  right >]]></string>
    <string name="step1_text">When you\'ve arrived too one of the displays in the que, press on of the buttons to generate a code</string>
    <string name="step2_message">You can enter the code that has been generated in the app</string>
    <string name="step4_message">If the answer is right, you will earn a point. For each attraction you\'ll need 3 points to earn a medal.</string>
    <string name="step5_message">If you\'ve earned all medals, you will get a code that you can exchange for a little gift at the store</string>
    <string name="errorConnection">There is already a connection in the making</string>
    <string name="question">Question</string>
    <string name="waiting_on_start">Waiting on start</string>
    <string name="step3_message">Within a few seconds a question will be displayed in the app with 4 multiple choice options below it. When you have discussed all the possible options and knop the answer, you can enter the answer using the buttons below the LCD screen</string>
    <string name="attractie">"Attraction: "</string>
    <string name="questionexplenation">The answer must be given via the buttons on the LCD screen</string>
    <string name="correcte_vragen">Correct questions:</string>
    <string name="congratulations">congratulations</string>
    <string name="discount_message" >You have earned all medals of the theme park, you can use this code to get a discount at the gift shop</string>
    <string name="allmedals_message" >" "</string>
    <string name="connect">Connect</string>
    <string name="enter_code">Enter Code</string>
</resources>